--- a/.gitignore
+++ b/.gitignore
@@ -4,48 +4,44 @@ __pycache__/
 *$py.class
 *.so
 .Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# Virtual Environment
-.env
-.venv
-env/
+.venv/
 venv/
 ENV/
+env/
+.env
+*.log
 
-# IDE
+# Distribution / packaging
+dist/
+build/
+*.egg-info/
+
+# IDE specific files
 .idea/
 .vscode/
 *.swp
 *.swo
-
-# Project specific
-**/*.csv
-*.log
-chromedriver
-chromedriver.exe
-.wdm/
-.wdm-cache/
-
-# OS specific
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db 
+
+# Frontend
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+.next/
+out/
+build/
+dist/
+coverage/
+
+# Environment variables
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Misc
+.DS_Store
+*.pem
+.cache/ 
