--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,4 +3,19 @@ Flask-Cors==4.0.0
 python-dotenv==1.0.1
 pytest==8.0.2
 black==24.2.0
-flake8==7.0.0 
+flake8==7.0.0
+
+# Web Scraping
+requests==2.31.0
+beautifulsoup4==4.12.3
+selenium==4.18.1
+lxml==5.1.0
+aiohttp==3.9.3
+
+# Data Processing
+pandas==2.2.1
+numpy==1.26.4
+
+# Utilities
+tqdm==4.66.2
+python-dateutil==2.8.2 
