--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.7",
     "element-plus": "^2.9.10",
     "pinia": "^2.1.7",
+    "marked": "^12.0.0",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5",
     "xlsx": "^0.18.5"
